--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,51 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dreamy Illustrations</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Open+Sans:wght@400;600&display=swap');
-      body {
-        font-family: 'Open Sans', sans-serif;
-      }
-      .logo-font {
-        font-family: 'Pacifico', cursive;
-      }
-    </style>
-  </head>
-  <body class="bg-gradient-to-b from-[#FBEFF8] to-[#D8F3FF] min-h-screen flex flex-col">
-
-    <!-- Navbar -->
-    <header class="flex justify-between items-center px-8 py-6">
-      <div class="text-3xl text-[#5B4A82] logo-font">DreamyDraw</div>
-      <nav class="space-x-6 text-[#5B4A82] font-semibold">
-        <a href="#" class="hover:underline">Home</a>
-        <a href="#" class="hover:underline">Gallery</a>
-        <a href="#" class="hover:underline">About</a>
-        <a href="#" class="hover:underline">Contact</a>
-      </nav>
-    </header>
-
-    <!-- Main section -->
-    <main class="flex-grow flex flex-col items-center justify-center text-center px-4">
-      <img src="your-illustration.png" alt="Dreamy illustration" class="w-72 h-72 object-contain mb-6 drop-shadow-lg" />
-      <h1 class="text-4xl md:text-5xl font-bold text-[#444066] mb-4">
-        Find Your Dream in Colors
-      </h1>
-      <p class="text-[#66657B] text-lg max-w-xl mb-6">
-        A world where imagination meets illustration. Explore hand-drawn digital artworks that inspire warmth and creativity.
-      </p>
-      <a href="#" class="bg-[#8AB6D6] hover:bg-[#76a2c5] text-white px-6 py-3 rounded-full text-lg shadow-md transition">
-        Explore Now
-      </a>
-    </main>
-
-    <!-- Footer -->
-    <footer class="text-center text-sm text-[#888] py-4">
-      © 2025 DreamyDraw. All rights reserved.
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Simple Shopping Mall</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #333;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+      padding: 2rem;
+    }
+    .product {
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+    .product img {
+      max-width: 100%;
+      height: auto;
+    }
+    .product h3 {
+      margin: 0.5rem 0;
+    }
+    .product button {
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>My Shopping Mall</h1>
+  </header>
+  <main class="products">
+    <div class="product">
+      <img src="https://via.placeholder.com/200" alt="Product 1" />
+      <h3>Product 1</h3>
+      <p>$19.99</p>
+      <button>Add to Cart</button>
+    </div>
+    <div class="product">
+      <img src="https://via.placeholder.com/200" alt="Product 2" />
+      <h3>Product 2</h3>
+      <p>$29.99</p>
+      <button>Add to Cart</button>
+    </div>
+  </main>
+</body>
 </html>
 
